@@ -1,3 +1,7 @@
+2011-05-27  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
+
+	* driver/pocc/driver-clastops.c: Pretty-print meta-info in PAST.
+
 2011-05-24  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
 
 	* doc/pocc.texi: Use AC_SEARCH_LIBS instead of AC_CHECK_LIB.
